customizations/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solana-kong
  namespace: haproxy
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solana-kong-haproxy
                port:
                  number: 80
